WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204205
Regression(
r244361
) iOS: Layout test http/tests/quicklook/rtf-document-domain-is-empty-string.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=204205
Summary
Regression(r244361) iOS: Layout test http/tests/quicklook/rtf-document-domain...
Chris Dumez
Reported
2019-11-14 15:21:19 PST
Layout test http/tests/quicklook/rtf-document-domain-is-empty-string.html is crashing: ASSERTION FAILED: checkURLReceivedFromCurrentOrPreviousWebProcess(m_process, url) /Volumes/Data/worker/trunk-peacee-ios-sim-debug-archive/build/OpenSource/Source/WebKit/UIProcess/WebPageProxy.cpp(3977) : void WebKit::WebPageProxy::didExplicitOpenForFrame(uint64_t, WTF::URL &&) 1 0x1084cb9f9 WTFCrash 2 0x10dbbb83b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10e546964 WebKit::WebPageProxy::didExplicitOpenForFrame(unsigned long long, WTF::URL&&) 4 0x10eee6146 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&), std::__1::tuple<unsigned long long, WTF::URL>, 0ul, 1ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&), std::__1::tuple<unsigned long long, WTF::URL>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 5 0x10eee5cc0 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&), std::__1::tuple<unsigned long long, WTF::URL>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(std::__1::tuple<unsigned long long, WTF::URL>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&)) 6 0x10eeb7110 void IPC::handleMessage<Messages::WebPageProxy::DidExplicitOpenForFrame, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&)>(IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, WTF::URL&&)) 7 0x10eeacc7c WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x10dc9a259 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 9 0x10e3c67f4 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x10e619cfa WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 11 0x10dc2c709 IPC::Connection::dispatchMessage(IPC::Decoder&) 12 0x10dc254a2 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 13 0x10dc2b59b IPC::Connection::dispatchIncomingMessages() 14 0x10dc4cbd5 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 15 0x10dc4cb09 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14, void>::call() 16 0x1084f637a WTF::Function<void ()>::operator()() const 17 0x108558743 WTF::RunLoop::performWork() 18 0x1085590be WTF::RunLoop::performWork(void*) 19 0x117c50be1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 20 0x117c50463 __CFRunLoopDoSources0 21 0x117c4ab1f __CFRunLoopRun 22 0x117c4a302 CFRunLoopRunSpecific 23 0x116d60044 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 24 0x107874080 WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 25 0x10783a3ff WTR::TestController::runUntil(bool&, WTF::Seconds) 26 0x10787803e WTR::TestInvocation::invoke() 27 0x1078432e8 WTR::TestController::runTest(char const*) 28 0x107843d46 WTR::TestController::runTestingServerLoop() 29 0x10783ad57 WTR::TestController::run() 30 0x10783a758 WTR::TestController::TestController(int, char const**) 31 0x10783ae23 WTR::TestController::TestController(int, char const**)
Attachments
Patch
(2.26 KB, patch)
2019-11-14 15:25 PST
,
Chris Dumez
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-11-14 15:21:33 PST
<
rdar://problem/51864314
>
Chris Dumez
Comment 2
2019-11-14 15:25:26 PST
Created
attachment 383578
[details]
Patch
Alex Christensen
Comment 3
2019-11-14 21:22:07 PST
Comment on
attachment 383578
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=383578&action=review
> Source/WebKit/ChangeLog:11 > + This trips our MESSAGE_CHECK_URL() check in the UIProcess which this path is not within the WebContent process'
when
Chris Dumez
Comment 4
2019-11-15 08:36:30 PST
Committed
r252484
: <
https://trac.webkit.org/changeset/252484
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug